--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 </head>
 <body>
     <header class="cabecalho">
-        <h1>MINHAS FOTOS</h1>
+        <h1>Minha Família</h1>
     </header>
     <main class="conteudo container">
+        <div class="conteudo__descricao">
+            Apresento a vocês minha linda família, familia composta por Noah (Sempre emburrado nas fotos), Munique (Sorrisaummmmm), e eu Felipe! Viemos todos da cidade de aimorés porém amamos as terras capixabas, e por isso estabelecemos nosso lar na Serra.<br> 
+            <br>
+            A Munique, mãe do Noah tem pouquíssima paciência, porém é muito alegre e divertida. Já o Noah apesar de ser uma criança bastante ranzinza, é um menino muito inteligente e divertido, e não pode ouvir falar em uma piscina que já quer pular dentro.<br>
+            <br>
+            E por fim eu Felipe, implico um poquinho, quase nada com eles, mas eles me suportam. <br>
+        </div>
         <div class="conteudo__fotos">
             
 
             
         </div>
-
     </main>
     <footer class="rodape container">
 
